--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,15 @@
 
 .wrapper{
     margin-top: 150px;
+    padding: 40px 50px;
+    text-align: center;
+    color:  #ffffff;
+    width: 1100px;
+    height: 312px;
+    left: 135px;
+    top: 5007px;
+    background-color:  #FF7A50;
+    border-radius: 20px;
 }
 
 .footer{
